--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+.history/
+*.zip
+.venv/
+__pycache__/
+.ipynb_checkpoints/
+.python-version
