Update notebook and project files

--- a/.gitignore
+++ b/.gitignore
@@ -206,9 +206,17 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# Colab / local history folder
 .history/
+
+# Compressed project archives
 *.zip
+
+# Virtual environment folder (managed by uv)
 .venv/
-__pycache__/
+
+# Jupyter notebook checkpoints
 .ipynb_checkpoints/
+
+# Python version file for uv (local environment)
 .python-version
