--- a/2025_01_21_himalayan_expeditions/pyproject.toml
+++ b/2025_01_21_himalayan_expeditions/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "pyreadstat>=1.3.1",
+    "scikit-learn>=1.7.2",
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "simpledbf>=0.2.6",
