--- a/2025_01_21_himalayan_expeditions/pyproject.toml
+++ b/2025_01_21_himalayan_expeditions/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "dbfread>=2.0.7",
+    "ipykernel>=7.1.0",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "pyreadstat>=1.3.1",
