--- a/2025_01_21_himalayan_expeditions/pyproject.toml
+++ b/2025_01_21_himalayan_expeditions/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "scipy>=1.16.3",
     "seaborn>=0.13.2",
     "simpledbf>=0.2.6",
+    "statsmodels>=0.14.5",
     "streamlit>=1.51.0",
     "xgboost>=3.1.1",
 ]
