--- a/2024-05-14_coffee_taste_test/pyproject.toml
+++ b/2024-05-14_coffee_taste_test/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "black>=25.11.0",
     "ipykernel>=7.1.0",
+    "jinja2>=3.1.6",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "pyjanitor>=0.32.1",
